Fix layout bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,12 +61,7 @@
 
 html {
   scroll-behavior: smooth;
-}
-
-@media (max-width: 768px) {
-  html {
-    overflow-x: hidden;
-  }
+  overflow-x: hidden;
 }
 
 .wave {
